--- a/common/src/main/resources/assets/hexparse/lang/en_us.json
+++ b/common/src/main/resources/assets/hexparse/lang/en_us.json
@@ -1,7 +1,9 @@
 {
   "hexcasting.action.hexparse:focus2code": "Encoding Gambit",
+  "hexcasting.action.hexparse:code2focus": "Decoding Gambit",
   "hexcasting.action.hexparse:remove_comments": "No-Comment Purification",
   "hexparse.book.entry": "HexParse Patterns",
-  "book.descrip.hexparse:focus2code": "Reads data from my offhand focus, and print parsed code into chat menu.",
+  "book.descrip.hexparse:focus2code": "Reads data from the focus I'm holding, and prints parsed code into chat menu.$(br)Can only be casted by staff.",
+  "book.descrip.hexparse:code2focus": "Reads code from my local clipboard, then parse it into the focus I'm holding.$(br)Can only be casted by staff.",
   "book.descrip.hexparse:remove_comments": "Clears all comment iotas in a list, returns processed list."
 }
