--- a/common/src/main/resources/assets/hexparse/lang/en_us.json
+++ b/common/src/main/resources/assets/hexparse/lang/en_us.json
@@ -1,4 +1,18 @@
 {
+  "hexparse.cmd.unlocker.unlock.all": "Unlocked %s types",
+  "hexparse.cmd.unlocker.lock.all": "Unlocked %s types",
+  "hexparse.cmd.unlocker.unlock.one": "Unlocked %s",
+  "hexparse.cmd.unlocker.lock.one": "Unlocked %s types",
+  "hexparse.cmd.read.display": "Result: %s",
+  "hexparse.cmd.read.share": "%s shares: %s (%s)",
+  "hexparse.msg.parse_error": "Error when parsing: %s",
+  "hexparse.msg.parse_error_node": "Error when parsing %s: %s",
+  "hexparse.msg.error.bracket.closed": "too many closed bracket",
+  "hexparse.msg.error.bracket.open": "too many open bracket",
+  "hexparse.msg.error.unknown_symbol": "Unknown symbol: %s",
+  "hexparse.msg.error.invalid_iota": "invalid iota: %s",
+  "hexparse.msg.error.illegal_pattern_angle": "illegal char '%s' in sequence \"%s\"",
+  "hexparse.msg.error.code_too_long": "CODE TOO LONG (%s)",
   "hexcasting.action.hexparse:focus2code": "Encoding Gambit",
   "hexcasting.action.hexparse:code2focus": "Decoding Gambit",
   "hexcasting.action.hexparse:learn_patterns": "Learn Great Patterns",
