--- a/common/src/main/resources/assets/hexparse/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hexparse/lang/zh_cn.json
@@ -1,4 +1,18 @@
 {
+  "hexparse.cmd.unlocker.unlock.all": "解锁了%s种卓越图案",
+  "hexparse.cmd.unlocker.lock.all": "锁定了%s种卓越图案",
+  "hexparse.cmd.unlocker.unlock.one": "解锁了%s",
+  "hexparse.cmd.unlocker.lock.one": "锁定了%s",
+  "hexparse.cmd.read.display": "结果：%s",
+  "hexparse.cmd.read.share": "%s分享了：%s （%s）",
+  "hexparse.msg.parse_error": "在解析时出错：%s",
+  "hexparse.msg.parse_error_node": "在解析%s时出错：%s",
+  "hexparse.msg.error.bracket.closed": "右括号过多",
+  "hexparse.msg.error.bracket.open": "左括号过多",
+  "hexparse.msg.error.unknown_symbol": "未知符号：%s",
+  "hexparse.msg.error.invalid_iota": "非法iota：%s",
+  "hexparse.msg.error.illegal_pattern_angle": "在序列\"%2$s\"中包含非法字符'%1$s'",
+  "hexparse.msg.error.code_too_long": "代码过长（%s）",
   "hexcasting.action.hexparse:focus2code": "编码之策略",
   "hexcasting.action.hexparse:code2focus": "解码之策略",
   "hexcasting.action.hexparse:learn_patterns": "内化卓越法术",
