--- a/common/src/main/resources/assets/hexparse/lang/en_us.json
+++ b/common/src/main/resources/assets/hexparse/lang/en_us.json
@@ -5,6 +5,12 @@
   "hexparse.cmd.unlocker.lock.one": "Locked %s",
   "hexparse.cmd.read.display": "Result: %s",
   "hexparse.cmd.read.share": "%s shares: %s (%s)",
+  "hexparse.cmd.macro.list.title": "%s %s(s) in total:",
+  "hexparse.cmd.macro.list.title.macro": "macro",
+  "hexparse.cmd.macro.list.title.dialect": "dialect",
+  "hexparse.cmd.macro.list.kv": "%s = %s",
+  "hexparse.cmd.macro.define": "Defined %s = %s.",
+  "hexparse.cmd.macro.remove": "Removed %s.",
   "hexparse.msg.parse_error": "Error when parsing: %s",
   "hexparse.msg.parse_error_node": "Error when parsing %s: %s",
   "hexparse.msg.error.bracket.closed": "too many closed bracket",
@@ -13,6 +19,8 @@
   "hexparse.msg.error.invalid_iota": "invalid iota: %s",
   "hexparse.msg.error.illegal_pattern_angle": "illegal char '%s' in sequence \"%s\"",
   "hexparse.msg.error.code_too_long": "CODE TOO LONG (%s)",
+  "hexparse.msg.error.used_macro": "Macro %s already used",
+  "hexparse.msg.error.invalid_macro_type": "Invalid macro/dialect confusion",
   "hexcasting.action.hexparse:focus2code": "Encoding Gambit",
   "hexcasting.action.hexparse:code2focus": "Decoding Gambit",
   "hexcasting.action.hexparse:learn_patterns": "Learn Great Patterns",
