--- a/common/src/main/resources/assets/hexparse/lang/en_us.json
+++ b/common/src/main/resources/assets/hexparse/lang/en_us.json
@@ -20,7 +20,7 @@
   "hexparse.msg.error.illegal_pattern_angle": "illegal char '%s' in sequence \"%s\"",
   "hexparse.msg.error.code_too_long": "CODE TOO LONG (%s)",
   "hexparse.msg.error.used_macro": "Macro %s already used",
-  "hexparse.msg.error.invalid_macro_type": "Invalid macro/dialect confusion",
+  "hexparse.msg.error.invalid_dialect_key": "Dialects can't start with '#' (%s)",
   "hexcasting.action.hexparse:focus2code": "Encoding Gambit",
   "hexcasting.action.hexparse:code2focus": "Decoding Gambit",
   "hexcasting.action.hexparse:learn_patterns": "Learn Great Patterns",
