--- a/common/src/main/resources/assets/hexparse/lang/en_us.json
+++ b/common/src/main/resources/assets/hexparse/lang/en_us.json
@@ -21,6 +21,10 @@
   "hexparse.msg.error.code_too_long": "CODE TOO LONG (%s)",
   "hexparse.msg.error.used_macro": "Macro %s already used",
   "hexparse.msg.error.invalid_dialect_key": "Dialects can't start with '#' (%s)",
+  "hexparse.msg.error.macro.too_many": "Macro/dialect count exceeded max; trimmed %s entries",
+  "hexparse.msg.error.macro.too_many.single": "Macro/dialect count exceeded max; add failed",
+  "hexparse.msg.error.macro.too_long": "Single macro too long; trimmed last %s characters",
+  "hexparse.msg.error.macro.too_long.key": "Macro/dialect key too long; add failed",
   "hexcasting.action.hexparse:focus2code": "Encoding Gambit",
   "hexcasting.action.hexparse:code2focus": "Decoding Gambit",
   "hexcasting.action.hexparse:learn_patterns": "Learn Great Patterns",
