--- a/common/src/main/resources/assets/hexparse/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hexparse/lang/zh_cn.json
@@ -21,6 +21,10 @@
   "hexparse.msg.error.code_too_long": "代码过长（%s）",
   "hexparse.msg.error.used_macro": "宏%s已使用",
   "hexparse.msg.error.invalid_dialect_key": "别名不可以'#'开头（%s）",
+  "hexparse.msg.error.macro.too_many": "宏/别名数量超过限制，移除了%s条记录",
+  "hexparse.msg.error.macro.too_many.single": "宏/别名数量超过限制，添加失败",
+  "hexparse.msg.error.macro.too_long": "宏过长；移除了末尾的%s个字符",
+  "hexparse.msg.error.macro.too_long.key": "宏/别名取名过长，添加失败",
   "hexcasting.action.hexparse:focus2code": "编码之策略",
   "hexcasting.action.hexparse:code2focus": "解码之策略",
   "hexcasting.action.hexparse:learn_patterns": "内化卓越法术",
