macro & dialect merged

--- a/common/src/main/resources/assets/hexparse/lang/en_us.json
+++ b/common/src/main/resources/assets/hexparse/lang/en_us.json
@@ -5,6 +5,12 @@
   "hexparse.cmd.unlocker.lock.one": "Locked %s",
   "hexparse.cmd.read.display": "Result: %s",
   "hexparse.cmd.read.share": "%s shares: %s (%s)",
+  "hexparse.cmd.macro.list.title": "%s %s(s) in total:",
+  "hexparse.cmd.macro.list.title.macro": "macro",
+  "hexparse.cmd.macro.list.title.dialect": "dialect",
+  "hexparse.cmd.macro.list.kv": "%s = %s",
+  "hexparse.cmd.macro.define": "Defined %s = %s.",
+  "hexparse.cmd.macro.remove": "Removed %s.",
   "hexparse.msg.parse_error": "Error when parsing: %s",
   "hexparse.msg.parse_error_node": "Error when parsing %s: %s",
   "hexparse.msg.error.bracket.closed": "too many closed bracket",
@@ -13,6 +19,12 @@
   "hexparse.msg.error.invalid_iota": "invalid iota: %s",
   "hexparse.msg.error.illegal_pattern_angle": "illegal char '%s' in sequence \"%s\"",
   "hexparse.msg.error.code_too_long": "CODE TOO LONG (%s)",
+  "hexparse.msg.error.used_macro": "Macro %s already used",
+  "hexparse.msg.error.invalid_dialect_key": "Dialects can't start with '#' (%s)",
+  "hexparse.msg.error.macro.too_many": "Macro/dialect count exceeded max; trimmed %s entries",
+  "hexparse.msg.error.macro.too_many.single": "Macro/dialect count exceeded max; add failed",
+  "hexparse.msg.error.macro.too_long": "Single macro too long; trimmed last %s characters",
+  "hexparse.msg.error.macro.too_long.key": "Macro/dialect key too long; add failed",
   "hexcasting.spell.hexparse:focus2code": "Encoding Gambit",
   "hexcasting.spell.hexparse:code2focus": "Decoding Gambit",
   "hexcasting.spell.hexparse:learn_patterns": "Learn Great Patterns",
