--- a/common/src/main/resources/assets/hexparse/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hexparse/lang/zh_cn.json
@@ -5,6 +5,12 @@
   "hexparse.cmd.unlocker.lock.one": "锁定了%s",
   "hexparse.cmd.read.display": "结果：%s",
   "hexparse.cmd.read.share": "%s分享了：%s （%s）",
+  "hexparse.cmd.macro.list.title": "共%s个%s：",
+  "hexparse.cmd.macro.list.title.macro": "宏",
+  "hexparse.cmd.macro.list.title.dialect": "别名",
+  "hexparse.cmd.macro.list.kv": "%s = %s",
+  "hexparse.cmd.macro.define": "Defined %s = %s.",
+  "hexparse.cmd.macro.remove": "Removed %s.",
   "hexparse.msg.parse_error": "在解析时出错：%s",
   "hexparse.msg.parse_error_node": "在解析%s时出错：%s",
   "hexparse.msg.error.bracket.closed": "右括号过多",
@@ -13,6 +19,12 @@
   "hexparse.msg.error.invalid_iota": "非法iota：%s",
   "hexparse.msg.error.illegal_pattern_angle": "在序列\"%2$s\"中包含非法字符'%1$s'",
   "hexparse.msg.error.code_too_long": "代码过长（%s）",
+  "hexparse.msg.error.used_macro": "宏%s已使用",
+  "hexparse.msg.error.invalid_dialect_key": "别名不可以'#'开头（%s）",
+  "hexparse.msg.error.macro.too_many": "宏/别名数量超过限制，移除了%s条记录",
+  "hexparse.msg.error.macro.too_many.single": "宏/别名数量超过限制，添加失败",
+  "hexparse.msg.error.macro.too_long": "宏过长；移除了末尾的%s个字符",
+  "hexparse.msg.error.macro.too_long.key": "宏/别名取名过长，添加失败",
   "hexcasting.spell.hexparse:focus2code": "编码之策略",
   "hexcasting.spell.hexparse:code2focus": "解码之策略",
   "hexcasting.spell.hexparse:learn_patterns": "内化卓越法术",
