--- a/common/src/main/resources/assets/hexparse/lang/en_us.json
+++ b/common/src/main/resources/assets/hexparse/lang/en_us.json
@@ -29,6 +29,7 @@
   "hexcasting.action.hexparse:code2focus": "Decoding Gambit",
   "hexcasting.action.hexparse:learn_patterns": "Learn Great Patterns",
   "hexcasting.action.hexparse:remove_comments": "No-Comment Purification",
+  "hexcasting.action.hexparse:compile": "Compile",
   "hexparse.book.entry": "HexParse Patterns",
   "book.descrip.hexparse:focus2code": "Reads data from the focus I'm holding, and prints parsed code into chat menu.$(br)Can only be casted by staff.",
   "book.descrip.hexparse:code2focus": "Reads code from my local clipboard, then parse it into the focus I'm holding.$(br)Can only be casted by staff.",
