--- a/common/src/main/resources/assets/hexparse/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hexparse/lang/zh_cn.json
@@ -29,6 +29,7 @@
   "hexcasting.action.hexparse:code2focus": "解码之策略",
   "hexcasting.action.hexparse:learn_patterns": "内化卓越法术",
   "hexcasting.action.hexparse:remove_comments": "压缩注释之纯化",
+  "hexcasting.action.hexparse:compile": "编译术",
   "hexparse.book.entry": "HexParse新增图案",
   "book.descrip.hexparse:focus2code": "读取我手中的核心，将其内容解析为代码输出至聊天窗口。$(br)只能在法杖内施放。",
   "book.descrip.hexparse:code2focus": "从剪贴板读取代码，并将其解析至我手持的核心。$(br)只能在法杖内施放。",
