added missing translate

--- a/common/src/main/resources/assets/hexparse/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hexparse/lang/zh_cn.json
@@ -9,8 +9,8 @@
   "hexparse.cmd.macro.list.title.macro": "宏",
   "hexparse.cmd.macro.list.title.dialect": "别名",
   "hexparse.cmd.macro.list.kv": "%s = %s",
-  "hexparse.cmd.macro.define": "Defined %s = %s.",
-  "hexparse.cmd.macro.remove": "Removed %s.",
+  "hexparse.cmd.macro.define": "定义 %s = %s.",
+  "hexparse.cmd.macro.remove": "移除了 %s 的定义。",
   "hexparse.msg.parse_error": "在解析时出错：%s",
   "hexparse.msg.parse_error_node": "在解析%s时出错：%s",
   "hexparse.msg.error.bracket.closed": "右括号过多",
