--- a/common/src/main/resources/assets/hexparse/lang/en_us.json
+++ b/common/src/main/resources/assets/hexparse/lang/en_us.json
@@ -17,6 +17,9 @@
   "hexparse.msg.error.bracket.open": "too many open bracket",
   "hexparse.msg.error.unknown_symbol": "Unknown symbol: %s",
   "hexparse.msg.error.invalid_iota": "invalid iota: %s",
+  "hexparse.msg.error.matrix.size": "invalid matrix size: %s",
+  "hexparse.msg.error.matrix.value": "invalid matrix value: %s",
+  "hexparse.msg.error.matrix.data_amount": "invalid matrix data size (%s < %s)",
   "hexparse.msg.error.illegal_pattern_angle": "illegal char '%s' in sequence \"%s\"",
   "hexparse.msg.error.code_too_long": "CODE TOO LONG (%s)",
   "hexparse.msg.error.used_macro": "Macro %s already used",
