--- a/common/src/main/resources/assets/hexparse/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hexparse/lang/zh_cn.json
@@ -17,6 +17,9 @@
   "hexparse.msg.error.bracket.open": "左括号过多",
   "hexparse.msg.error.unknown_symbol": "未知符号：%s",
   "hexparse.msg.error.invalid_iota": "非法iota：%s",
+  "hexparse.msg.error.matrix.size": "非法矩阵尺寸：%s",
+  "hexparse.msg.error.matrix.value": "非法矩阵取值：%s",
+  "hexparse.msg.error.matrix.data_amount": "非法矩阵数据量（%s < %s）",
   "hexparse.msg.error.illegal_pattern_angle": "在序列\"%2$s\"中包含非法字符'%1$s'",
   "hexparse.msg.error.code_too_long": "代码过长（%s）",
   "hexparse.msg.error.used_macro": "宏%s已使用",
