update target: conflict resolving command

--- a/common/src/main/resources/assets/hexparse/lang/en_us.json
+++ b/common/src/main/resources/assets/hexparse/lang/en_us.json
@@ -11,6 +11,11 @@
   "hexparse.cmd.macro.list.kv": "%s = %s",
   "hexparse.cmd.macro.define": "Defined %s = %s.",
   "hexparse.cmd.macro.remove": "Removed %s.",
+  "hexparse.cmd.conflict.list_all.title": "All pattern names with conflicts:",
+  "hexparse.cmd.conflict.list_all.entry": "- %s (%d patterns)",
+  "hexparse.cmd.conflict.list.title": "All conflicts under name %s (currently set to %s):",
+  "hexparse.cmd.conflict.list.entry": "- %s (%s)",
+  "hexparse.cmd.conflict.edited": "Set short name %s to pattern %s (%s).",
   "hexparse.msg.parse_error": "Error when parsing: %s",
   "hexparse.msg.parse_error_node": "Error when parsing %s: %s",
   "hexparse.msg.error.bracket.closed": "too many closed bracket",
