--- a/common/src/main/resources/assets/hexparse/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hexparse/lang/zh_cn.json
@@ -11,6 +11,10 @@
   "hexparse.cmd.macro.list.kv": "%s = %s",
   "hexparse.cmd.macro.define": "定义 %s = %s.",
   "hexparse.cmd.macro.remove": "移除了 %s 的定义。",
+  "hexparse.cmd.conflict.list_all.title": "所有含冲突图案名称：",
+  "hexparse.cmd.conflict.list_all.entry": "- %s （共 %d 个图案）",
+  "hexparse.cmd.conflict.list.title": "名称 %s 下的所有冲突图案（当前指向 %s）：",
+  "hexparse.cmd.conflict.edited": "短名称 %s 已设置为图案 %s (%s)。",
   "hexparse.msg.parse_error": "在解析时出错：%s",
   "hexparse.msg.parse_error_node": "在解析%s时出错：%s",
   "hexparse.msg.error.bracket.closed": "右括号过多",
