--- a/common/src/main/resources/assets/hexparse/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hexparse/lang/zh_cn.json
@@ -46,5 +46,6 @@
   "book.descrip.hexparse:code2focus": "从剪贴板读取代码，并将其解析至我手持的核心。$(br)只能在法杖内施放。",
   "book.descrip.hexparse:learn_patterns": "从手持物品（远古卷轴、核心、制成的施法道具等）内提取卓越法术图案，返回装有解码器本次学习内容的列表。",
   "book.descrip.hexparse:remove_comments": "清除列表内所有注释iota，返回处理后的列表。",
-  "book.descrip.hexparse:create_linebreak": "在栈内添加一个具有给定数目空格缩进的换行注释iota。"
+  "book.descrip.hexparse:create_linebreak": "在栈内添加一个具有给定数目空格缩进的换行注释iota。",
+  "book.descrip.hexparse:compile": "将输入字符串iota编译为iota列表；若未安装$(bold)$(thing)MoreIotas/$则无效果。"
 }
