--- a/common/src/main/resources/assets/hexparse/lang/en_us.json
+++ b/common/src/main/resources/assets/hexparse/lang/en_us.json
@@ -42,6 +42,12 @@
   "hexcasting.action.hexparse:remove_comments": "No-Comment Purification",
   "hexcasting.action.hexparse:create_linebreak": "Line-Break Prfn.",
   "hexcasting.action.hexparse:compile": "Compile",
+  "hexparse.category.commands": "HexParse Commands",
+  "hexparse.category.commands.desc": "How I make use of the exotic power of $(thing)HexParse/$.",
+  "hexparse.book.entry.commands.io": "Reading & Writing",
+  "hexparse.book.entry.commands.config": "Configs",
+  "hexparse.book.entry.commands.misc": "Misc. & Helpers",
+  "hexparse.book.entry.commands.op": "OP-Only Commands",
   "hexparse.book.entry": "HexParse Patterns",
   "book.descrip.hexparse:focus2code": "Reads data from the focus I'm holding, and prints parsed code into chat menu.$(br)Can only be casted by staff.",
   "book.descrip.hexparse:code2focus": "Reads code from my local clipboard, then parse it into the focus I'm holding.$(br)Can only be casted by staff.",
