--- a/common/src/main/resources/assets/hexparse/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hexparse/lang/zh_cn.json
@@ -41,6 +41,23 @@
   "hexcasting.spell.hexparse:remove_comments": "压缩注释之纯化",
   "hexcasting.spell.hexparse:create_linebreak": "换行之纯化",
   "hexcasting.spell.hexparse:compile": "编译术",
+  "hexparse.category.commands": "HexParse指令",
+  "hexparse.category.commands.desc": "我如何利用来自$(thing)HexParse/$的异端之力",
+  "hexparse.book.entry.commands.io": "读写",
+  "hexparse.book.entry.commands.io.base": "$(li)$(bold)/hexParse <代码文本> [重命名]/$直接解析输入的代码至手持核心；若提供了“重命名”可选参数则会同时重命名核心$(li)$(bold)/hexParse read/$：读取玩家手中的核心，将其内容解析为代码输出至聊天窗口，输出结果点击可复制",
+  "hexparse.book.entry.commands.io.clipboard": "$(li)$(bold)/hexParse clipboard [重命名]/$：读取玩家剪贴板内容，将其作为代码解析至核心；“重命名”可选参数会同时重命名核心$(li)$(bold)/hexParse clipboard_angles [重命名]/$：同上，但只会解析其中形如$(bold)\"wedsaq\"/$的笔划序列段，并将其逐个转为图案",
+  "hexparse.book.entry.commands.io.read.2": "$(li)$(bold)/hexParse read_hexbug/$：同$(bold)read/$，但会尝试将格式翻译以适配Discord内HexBug的$(bold)/patterns hex/$命令；$(italic)注：非图案常量、部分HexBug内过时注册名等仍需手动处理/$$(li)$(bold)/hexParse share/$：（实验性质）同$(bold)read/$，但同时广播核心原始内容与解析后代码至服务器内所有玩家",
+  "hexparse.book.entry.commands.io.mind": "$(li)$(bold)/hexParse mind_stack .../$：从玩家思维栈（法杖施法空间）读写Iota$(li2)$(bold)... peek/$：读取栈内最后一个Iota，若栈为空则得到$(bold)null/$$(li2)$(bold)... push <代码>/$：解析代码并压入思维栈$(li2)$(bold)... push_clipboard/$：同上，但代码来自读取剪贴板",
+  "hexparse.book.entry.commands.io.prop": "$(li)$(bold)/hexParse property .../$：（$(bold)$(thing)Hexcellular/$联动）向质性Iota读写数据；出于安全性考虑，使用的质性名称会强制添加“_”前缀$(li2)$(bold)... read <质性名>/$：从指定质性读取内容$(li2)$(bold)... write <质性名> <代码>/$：解析代码并写入指定质性$(li2)$(bold)... clipboard <质性名>/$：同上，但代码来自读取剪贴板",
+  "hexparse.book.entry.commands.config": "配置",
+  "hexparse.book.entry.commands.config.macro": "$(li)$(bold)/hexParse (macro/dialect) .../$：管理存储于客户端的别名（dialect，不以$(bold)#/$开头的1对1文本映射）和宏（以$(bold)#/$开头，映射为不定长代码段）$(li2)$(bold)... list/$：列出所有保存的宏/别名$(li2)...",
+  "hexparse.book.entry.commands.config.macro.2": "$(li2)$(bold)... define <名称> <内容>/$：定义一组宏/别名，可以为新定义或覆盖已有$(li2)$(bold)macro define_clipboard <名称>/$：同上，但仅对宏可用，读取剪贴板作为宏内容$(li2)$(bold)... remove <名称>/$：移除一个保存的宏/别名（若存在）",
+  "hexparse.book.entry.commands.config.conflicts": "$(li)$(bold)/hexParse conflict/$：在不同图案拥有相同短名称（ID路径）时解决冲突$(li2)$(italic)仅在单人游戏、本地联机主机与OP权限下启用/$$(li2)$(bold).../$ 或 $(bold)... list/$：列出全部对应多个长ID的短名称$(li2)...",
+  "hexparse.book.entry.commands.config.conflicts.2": "$(li2)$(bold)... list <短名称>/$：列出给定短名称下相互冲突的所有长ID$(li2)$(bold)... set <短名称> <长ID>/$：重定向给定短名称至长图案ID",
+  "hexparse.book.entry.commands.misc": "杂项 & 帮手",
+  "hexparse.book.entry.commands.misc.1": "$(li)$(bold)/hexParse donate [amount]/$：向自然捐赠等价于指定数量紫水晶粉的媒质；使用于为了使用此mod而产生负罪感的场合 ::)$(li)$(bold)/hexParse lehmer [...数字列表]/$：计算给定排列（从升序出发，如$(bold)0 1 2 3 4/$）对应的Lehmer Code；输入之间需要以空格分隔",
+  "hexparse.book.entry.commands.op": "OP指令",
+  "hexparse.book.entry.commands.op.1": "$(li)$(bold)/hexParse unlock_great/$$(li2)$(bold)(unlockAll|lockAll|unlock <图案ID>|lock <图案ID>)/$$(li2)配置当前世界的卓越法术解锁状态，子指令分别用于全部解锁、全部锁定与按ID解锁特定",
   "hexparse.book.entry": "HexParse新增图案",
   "book.descrip.hexparse:focus2code": "读取我手中的核心，将其内容解析为代码输出至聊天窗口。$(br)只能在法杖内施放。",
   "book.descrip.hexparse:code2focus": "从剪贴板读取代码，并将其解析至我手持的核心。$(br)只能在法杖内施放。",
