[Release] lang adjustments

--- a/common/src/main/resources/assets/hexparse/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hexparse/lang/zh_cn.json
@@ -52,10 +52,10 @@
   "hexparse.book.entry.commands.config": "配置",
   "hexparse.book.entry.commands.config.macro": "$(li)$(bold)/hexParse (macro/dialect) .../$：管理存储于客户端的别名（dialect，不以$(bold)#/$开头的1对1文本映射）和宏（以$(bold)#/$开头，映射为不定长代码段）$(li2)$(bold)... list/$：列出所有保存的宏/别名$(li2)...",
   "hexparse.book.entry.commands.config.macro.2": "$(li2)$(bold)... define <名称> <内容>/$：定义一组宏/别名，可以为新定义或覆盖已有$(li2)$(bold)macro define_clipboard <名称>/$：同上，但仅对宏可用，读取剪贴板作为宏内容$(li2)$(bold)... remove <名称>/$：移除一个保存的宏/别名（若存在）",
-  "hexparse.book.entry.commands.config.conflicts": "$(li)$(bold)/hexParse conflict/$：在不同图案拥有相同短名称（ID路径）时解决冲突$(li2)$(italic)仅在单人游戏、本地联机主机与OP权限下启用/$$(li2)$(bold).../$ 或 $(bold)... list/$：列出全部对应多个长ID的短名称$(li2)...",
+  "hexparse.book.entry.commands.config.conflicts": "$(li)$(bold)/hexParse conflict/$：在不同图案拥有相同短名称（ID路径）时解决冲突$(li2)$(italic)仅在物理客户端（单人游戏、本地联机）或拥有OP权限时启用/$$(li2)$(bold).../$ 或 $(bold)... list/$：列出全部对应多个长ID的短名称$(li2)...",
   "hexparse.book.entry.commands.config.conflicts.2": "$(li2)$(bold)... list <短名称>/$：列出给定短名称下相互冲突的所有长ID$(li2)$(bold)... set <短名称> <长ID>/$：重定向给定短名称至长图案ID",
   "hexparse.book.entry.commands.misc": "杂项 & 帮手",
-  "hexparse.book.entry.commands.misc.1": "$(li)$(bold)/hexParse donate [amount]/$：向自然捐赠等价于指定数量紫水晶粉的媒质；使用于为了使用此mod而产生负罪感的场合 ::)$(li)$(bold)/hexParse lehmer [...数字列表]/$：计算给定排列（从升序出发，如$(bold)0 1 2 3 4/$）对应的Lehmer Code；输入之间需要以空格分隔",
+  "hexparse.book.entry.commands.misc.1": "$(li)$(bold)/hexParse donate [amount]/$：向自然捐赠等价于指定数量紫水晶粉的媒质；使用于为了使用此mod而产生负罪感的场合 ::)$(li)$(bold)/hexParse lehmer [...数字列表]/$：计算给定排列（从升序出发，如$(bold)0 1 2 3 4/$）对应的Lehmer Code；输入之间需要以空格分隔；所得结果可用于$(l:patterns/stackmanip#hexcasting:swizzle)$(action)骗徒之策略/$",
   "hexparse.book.entry.commands.op": "OP指令",
   "hexparse.book.entry.commands.op.1": "$(li)$(bold)/hexParse unlock_great/$$(li2)$(bold)(unlockAll|lockAll|unlock <图案ID>|lock <图案ID>)/$$(li2)配置当前世界的卓越法术解锁状态，子指令分别用于全部解锁、全部锁定与按ID解锁特定",
   "hexparse.book.entry": "HexParse新增图案",
