comment switcher pattern

--- a/common/src/main/resources/assets/hexparse/lang/en_us.json
+++ b/common/src/main/resources/assets/hexparse/lang/en_us.json
@@ -42,6 +42,7 @@
   "hexcasting.action.hexparse:remove_comments": "No-Comment Purification",
   "hexcasting.action.hexparse:create_linebreak": "Line-Break Prfn.",
   "hexcasting.action.hexparse:compile": "Compile",
+  "hexcasting.action.hexparse:comment_switcher": "Comment Switcher",
   "hexparse.category.commands": "HexParse Commands",
   "hexparse.category.commands.desc": "How I make use of the exotic power of $(thing)HexParse/$.",
   "hexparse.book.entry.commands.io": "Reading & Writing",
@@ -60,6 +61,7 @@
   "hexparse.book.entry.commands.op": "OP-Only Commands",
   "hexparse.book.entry.commands.op.1": "$(li)$(bold)/hexParse unlock_great/$$(li2)$(bold)(unlockAll|lockAll|unlock <pattern id>|lock <pattern id>)/$$(li2)controls great pattern unlocking process of current world by locking/unlocking all at once, or a single great pattern each execution.",
   "hexparse.book.entry": "HexParse Patterns",
+  "book.descrip.hexparse:comment_switcher": "Transforms input Comment Iota into String Iota, or everything else into Comment Iota; has no effect if $(bold)$(thing)MoreIotas/$ not installed.",
   "book.descrip.hexparse:focus2code": "Reads data from the focus I'm holding, and prints parsed code into chat menu.$(br)Can only be casted by staff.",
   "book.descrip.hexparse:code2focus": "Reads code from my local clipboard, then parse it into the focus I'm holding.$(br)Can only be casted by staff.",
   "book.descrip.hexparse:learn_patterns": "Extract great patterns from handheld items (ancient scrolls, focuses, compiled casting items, etc.), and returns a list of newly learned ones by the parser.",
