--- a/common/src/main/resources/assets/hexparse/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hexparse/lang/zh_cn.json
@@ -41,6 +41,7 @@
   "hexcasting.action.hexparse:remove_comments": "压缩注释之纯化",
   "hexcasting.action.hexparse:create_linebreak": "换行之纯化",
   "hexcasting.action.hexparse:compile": "编译术",
+  "hexcasting.action.hexparse:comment_switcher": "注释转换",
   "hexparse.category.commands": "HexParse指令",
   "hexparse.category.commands.desc": "我如何利用来自$(thing)HexParse/$的异端之力",
   "hexparse.book.entry.commands.io": "读写",
@@ -59,6 +60,7 @@
   "hexparse.book.entry.commands.op": "OP指令",
   "hexparse.book.entry.commands.op.1": "$(li)$(bold)/hexParse unlock_great/$$(li2)$(bold)(unlockAll|lockAll|unlock <图案ID>|lock <图案ID>)/$$(li2)配置当前世界的卓越法术解锁状态，子指令分别用于全部解锁、全部锁定与按ID解锁特定",
   "hexparse.book.entry": "HexParse新增图案",
+  "book.descrip.hexparse:comment_switcher": "将输入的注释Iota转换为字符串Iota，或其它内容转换为注释Iota；若未安装$(bold)$(thing)MoreIotas/$则无效果。",
   "book.descrip.hexparse:focus2code": "读取我手中的核心，将其内容解析为代码输出至聊天窗口。$(br)只能在法杖内施放。",
   "book.descrip.hexparse:code2focus": "从剪贴板读取代码，并将其解析至我手持的核心。$(br)只能在法杖内施放。",
   "book.descrip.hexparse:learn_patterns": "从手持物品（远古卷轴、核心、制成的施法道具等）内提取卓越法术图案，返回装有解码器本次学习内容的列表。",
