--- a/common/src/main/resources/assets/hexparse/lang/en_us.json
+++ b/common/src/main/resources/assets/hexparse/lang/en_us.json
@@ -43,6 +43,7 @@
   "hexcasting.action.hexparse:create_linebreak": "Line-Break Prfn.",
   "hexcasting.action.hexparse:compile": "Compile",
   "hexcasting.action.hexparse:comment_switcher": "Comment Switcher",
+  "hexcasting.action.hexparse:donate": "Donation",
   "hexparse.category.commands": "HexParse Commands",
   "hexparse.category.commands.desc": "How I make use of the exotic power of $(thing)HexParse/$.",
   "hexparse.book.entry.commands.io": "Reading & Writing",
@@ -68,6 +69,7 @@
   "book.descrip.hexparse:remove_comments": "Clears all comment iotas in a list, returns processed list.",
   "book.descrip.hexparse:create_linebreak": "Adds a line-break comment iota with space-indents of given number to the stack.",
   "book.descrip.hexparse:compile": "Compiles accepted string iota into an iota list; has no effect if $(bold)$(thing)MoreIotas/$ not installed.",
+  "book.descrip.hexparse:donate": "Donate a certain amount of media (in dusts) to the Nature.",
   "text.autoconfig.hexparse.option.common.parseGreatSpells": "Parse Great Spells",
   "text.autoconfig.hexparse.option.common.commentParsingMode": "Comment parsing mode",
   "text.autoconfig.hexparse.option.common.indentParsingMode": "Indent parsing mode",
