--- a/common/src/main/resources/assets/hexparse/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hexparse/lang/zh_cn.json
@@ -49,6 +49,7 @@
   "hexparse.book.entry.commands.io.base": "$(li)$(bold)/hexParse <代码文本> [重命名]/$直接解析输入的代码至手持核心；若提供了“重命名”可选参数则会同时重命名核心$(li)$(bold)/hexParse read/$：读取玩家手中的核心，将其内容解析为代码输出至聊天窗口，输出结果点击可复制",
   "hexparse.book.entry.commands.io.clipboard": "$(li)$(bold)/hexParse clipboard [重命名]/$：读取玩家剪贴板内容，将其作为代码解析至核心；“重命名”可选参数会同时重命名核心$(li)$(bold)/hexParse clipboard_angles [重命名]/$：同上，但只会解析其中形如$(bold)\"wedsaq\"/$的笔划序列段，并将其逐个转为图案",
   "hexparse.book.entry.commands.io.read.2": "$(li)$(bold)/hexParse read_hexbug/$：同$(bold)read/$，但会尝试将格式翻译以适配Discord内HexBug的$(bold)/patterns hex/$命令；$(italic)注：非图案常量、部分HexBug内过时注册名等仍需手动处理/$$(li)$(bold)/hexParse share/$：（实验性质）同$(bold)read/$，但同时广播核心原始内容与解析后代码至服务器内所有玩家",
+  "hexparse.book.entry.commands.io.read.3": "$(li)$(bold)/hexParse read_deep/$：同$(bold)read/$，但会尝试递归展开所有内容，包括质性iota（若安装了$(bold)$(thing)HexCellular/$）与跳转iota（包括已注册已知的帧）。可于$(bold)$(thing)HexParseAPI/$内注册新可读内容。",
   "hexparse.book.entry.commands.io.mind": "$(li)$(bold)/hexParse mind_stack .../$：从玩家思维栈（法杖施法空间）读写Iota$(li2)$(bold)... peek/$：读取栈内最后一个Iota，若栈为空则得到$(bold)null/$$(li2)$(bold)... push <代码>/$：解析代码并压入思维栈$(li2)$(bold)... push_clipboard/$：同上，但代码来自读取剪贴板",
   "hexparse.book.entry.commands.io.prop": "$(li)$(bold)/hexParse property .../$：（$(bold)$(thing)Hexcellular/$联动）向质性Iota读写数据；出于安全性考虑，使用的质性名称会强制添加“_”前缀$(li2)$(bold)... read <质性名>/$：从指定质性读取内容$(li2)$(bold)... write <质性名> <代码>/$：解析代码并写入指定质性$(li2)$(bold)... clipboard <质性名>/$：同上，但代码来自读取剪贴板",
   "hexparse.book.entry.commands.config": "配置",
